[gd_scene load_steps=8 format=3 uid="uid://bp383p4e73kc8"]

[ext_resource type="Texture2D" uid="uid://dae7sbt6qb0dy" path="res://sprites/coffeRoom.png" id="1_25b8a"]
[ext_resource type="Script" uid="uid://jbde3gwlssto" path="res://code/coffe.gd" id="1_gylp1"]
[ext_resource type="Texture2D" uid="uid://cqktomm32fthv" path="res://sprites/coffeRoom decorations1.png" id="2_gylp1"]
[ext_resource type="Texture2D" uid="uid://jucs60375vha" path="res://sprites/coffeRoom decorations2.png" id="3_8cuxv"]
[ext_resource type="Texture2D" uid="uid://c557i2u27wbw7" path="res://sprites/coffeRoom decorations3.png" id="4_4ffup"]
[ext_resource type="PackedScene" uid="uid://cugdj5hfbsory" path="res://scenes/player.tscn" id="6_8cuxv"]
[ext_resource type="AudioStream" uid="uid://d1gnrjpn7m84t" path="res://music/DANGANRONPA OST_ -1-05- Beautiful Dead.mp3" id="7_4ffup"]

[node name="Coffe" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_gylp1")

[node name="background" type="TextureRect" parent="."]
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0
scale = Vector2(0.2, 0.2)
texture = ExtResource("1_25b8a")

[node name="big_plank" type="TextureRect" parent="."]
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0
scale = Vector2(0.2, 0.2)
texture = ExtResource("2_gylp1")

[node name="coffe_door" type="Button" parent="."]
modulate = Color(1, 1, 1, 0)
layout_mode = 0
offset_left = 294.0
offset_top = 266.0
offset_right = 427.0
offset_bottom = 454.0

[node name="green_door" type="Button" parent="."]
modulate = Color(1, 1, 1, 0)
layout_mode = 0
offset_left = 754.0
offset_top = 249.0
offset_right = 854.0
offset_bottom = 451.0

[node name="first_letter" type="TextureRect" parent="."]
visible = false
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0
scale = Vector2(0.2, 0.2)
texture = ExtResource("3_8cuxv")

[node name="exit" type="Button" parent="first_letter"]
modulate = Color(1, 1, 1, 0)
layout_mode = 0
offset_right = 5760.0
offset_bottom = 3240.0

[node name="second_letter" type="TextureRect" parent="."]
visible = false
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0
scale = Vector2(0.2, 0.2)
texture = ExtResource("4_4ffup")

[node name="exit" type="Button" parent="second_letter"]
modulate = Color(1, 1, 1, 0)
layout_mode = 0
offset_right = 5760.0
offset_bottom = 3240.0

[node name="(1,1)" type="Button" parent="."]
modulate = Color(1, 1, 0, 0)
layout_mode = 0
offset_left = 496.0
offset_top = 479.0
offset_right = 541.0
offset_bottom = 503.0

[node name="(2,1)" type="Button" parent="."]
modulate = Color(1, 1, 1, 0)
layout_mode = 0
offset_left = 543.0
offset_top = 479.0
offset_right = 583.0
offset_bottom = 503.0

[node name="(3,1)" type="Button" parent="."]
modulate = Color(1, 1, 1, 0)
layout_mode = 0
offset_left = 586.0
offset_top = 480.0
offset_right = 627.0
offset_bottom = 503.0

[node name="(5,1)" type="Button" parent="."]
modulate = Color(1, 1, 1, 0)
layout_mode = 0
offset_left = 663.0
offset_top = 480.0
offset_right = 715.0
offset_bottom = 505.0
rotation = -0.0523599

[node name="(4,1)" type="Button" parent="."]
modulate = Color(1, 1, 1, 0)
layout_mode = 0
offset_left = 627.0
offset_top = 481.0
offset_right = 666.0
offset_bottom = 505.0
rotation = -0.0523599

[node name="(1,2)" type="Button" parent="."]
modulate = Color(1, 1, 1, 0)
layout_mode = 0
offset_left = 491.0
offset_top = 505.0
offset_right = 538.0
offset_bottom = 528.0

[node name="(2,2)" type="Button" parent="."]
modulate = Color(1, 1, 1, 0)
layout_mode = 0
offset_left = 538.0
offset_top = 505.0
offset_right = 583.0
offset_bottom = 527.0

[node name="(3,2)" type="Button" parent="."]
modulate = Color(1, 1, 1, 0)
layout_mode = 0
offset_left = 586.0
offset_top = 504.0
offset_right = 630.0
offset_bottom = 527.0

[node name="(4,2)" type="Button" parent="."]
modulate = Color(1, 1, 1, 0)
layout_mode = 0
offset_left = 631.0
offset_top = 505.0
offset_right = 673.0
offset_bottom = 529.0
rotation = -0.0523599

[node name="(5,2)" type="Button" parent="."]
modulate = Color(1, 1, 1, 0)
layout_mode = 0
offset_left = 674.0
offset_top = 505.0
offset_right = 722.0
offset_bottom = 529.0
rotation = -0.0523599

[node name="(1,3)" type="Button" parent="."]
modulate = Color(1, 1, 1, 0)
layout_mode = 0
offset_left = 483.0
offset_top = 529.0
offset_right = 534.0
offset_bottom = 555.0

[node name="(2,3)" type="Button" parent="."]
modulate = Color(1, 1, 1, 0)
layout_mode = 0
offset_left = 535.0
offset_top = 528.0
offset_right = 584.0
offset_bottom = 555.0

[node name="(3,3)" type="Button" parent="."]
modulate = Color(1, 1, 1, 0)
layout_mode = 0
offset_left = 585.0
offset_top = 529.0
offset_right = 634.0
offset_bottom = 556.0

[node name="(4,3)" type="Button" parent="."]
modulate = Color(1, 1, 1, 0)
layout_mode = 0
offset_left = 634.0
offset_top = 529.0
offset_right = 679.0
offset_bottom = 559.0
rotation = -0.0523599

[node name="(5,3)" type="Button" parent="."]
modulate = Color(1, 1, 1, 0)
layout_mode = 0
offset_left = 682.0
offset_top = 529.0
offset_right = 733.0
offset_bottom = 559.0
rotation = -0.0523599

[node name="(1,4)" type="Button" parent="."]
modulate = Color(1, 1, 1, 0)
layout_mode = 0
offset_left = 475.0
offset_top = 558.0
offset_right = 530.0
offset_bottom = 581.0

[node name="(2,4)" type="Button" parent="."]
modulate = Color(1, 1, 1, 0)
layout_mode = 0
offset_left = 532.0
offset_top = 558.0
offset_right = 583.0
offset_bottom = 581.0

[node name="(3,4)" type="Button" parent="."]
modulate = Color(1, 1, 1, 0)
layout_mode = 0
offset_left = 585.0
offset_top = 558.0
offset_right = 638.0
offset_bottom = 581.0

[node name="(4,4)" type="Button" parent="."]
modulate = Color(1, 1, 1, 0)
layout_mode = 0
offset_left = 639.0
offset_top = 559.0
offset_right = 686.0
offset_bottom = 582.0
rotation = -0.0523599

[node name="(5,4)" type="Button" parent="."]
modulate = Color(1, 1, 1, 0)
layout_mode = 0
offset_left = 689.0
offset_top = 559.0
offset_right = 743.0
offset_bottom = 583.0
rotation = -0.0523599

[node name="(1,5)" type="Button" parent="."]
modulate = Color(1, 1, 1, 0)
layout_mode = 0
offset_left = 468.0
offset_top = 584.0
offset_right = 527.0
offset_bottom = 612.0

[node name="(2,5)" type="Button" parent="."]
modulate = Color(1, 1, 1, 0)
layout_mode = 0
offset_left = 528.0
offset_top = 583.0
offset_right = 583.0
offset_bottom = 612.0

[node name="(3,5)" type="Button" parent="."]
modulate = Color(1, 1, 1, 0)
layout_mode = 0
offset_left = 586.0
offset_top = 584.0
offset_right = 641.0
offset_bottom = 613.0

[node name="(4,5)" type="Button" parent="."]
modulate = Color(1, 1, 1, 0)
layout_mode = 0
offset_left = 643.0
offset_top = 584.0
offset_right = 694.0
offset_bottom = 615.0
rotation = -0.0523599

[node name="(5,5)" type="Button" parent="."]
modulate = Color(1, 1, 1, 0)
layout_mode = 0
offset_left = 696.0
offset_top = 584.0
offset_right = 756.0
offset_bottom = 615.0
rotation = -0.0523599

[node name="plank" type="Button" parent="."]
visible = false
modulate = Color(1, 1, 1, 0)
layout_mode = 0
offset_left = 507.0
offset_top = 77.0
offset_right = 696.0
offset_bottom = 451.0

[node name="final_exit" type="Button" parent="."]
visible = false
modulate = Color(1, 1, 1, 0)
layout_mode = 0
offset_left = 508.0
offset_top = 77.0
offset_right = 695.0
offset_bottom = 454.0

[node name="player" parent="." instance=ExtResource("6_8cuxv")]
position = Vector2(166, 359)
leftArmAngle = -5
rightArmAngle = 5
leftLegAngle = -5
rightLegAngle = 5

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("7_4ffup")
autoplay = true
parameters/looping = true

[connection signal="pressed" from="coffe_door" to="." method="_on_coffe_door_pressed"]
[connection signal="pressed" from="green_door" to="." method="_on_green_door_pressed"]
[connection signal="pressed" from="first_letter/exit" to="." method="_on_exit_pressed"]
[connection signal="pressed" from="second_letter/exit" to="." method="_on_exit2_pressed"]
[connection signal="pressed" from="(1,1)" to="." method="_on__pressed" binds= ["(1,1)"]]
[connection signal="pressed" from="(2,1)" to="." method="_on__pressed" binds= ["(2,1)"]]
[connection signal="pressed" from="(3,1)" to="." method="_on__pressed" binds= ["(3,1)"]]
[connection signal="pressed" from="(5,1)" to="." method="_on__pressed" binds= ["(5,1)"]]
[connection signal="pressed" from="(4,1)" to="." method="_on__pressed" binds= ["(4,1)"]]
[connection signal="pressed" from="(1,2)" to="." method="_on__pressed" binds= ["(1,2)"]]
[connection signal="pressed" from="(2,2)" to="." method="_on__pressed" binds= ["(2,2)"]]
[connection signal="pressed" from="(3,2)" to="." method="_on__pressed" binds= ["(3,2)"]]
[connection signal="pressed" from="(4,2)" to="." method="_on__pressed" binds= ["(4,2)"]]
[connection signal="pressed" from="(5,2)" to="." method="_on__pressed" binds= ["(5,2)"]]
[connection signal="pressed" from="(1,3)" to="." method="_on__pressed" binds= ["(1,3)"]]
[connection signal="pressed" from="(2,3)" to="." method="_on__pressed" binds= ["(2,3)"]]
[connection signal="pressed" from="(3,3)" to="." method="_on__pressed" binds= ["(3,3)"]]
[connection signal="pressed" from="(4,3)" to="." method="_on__pressed" binds= ["(4,3)"]]
[connection signal="pressed" from="(5,3)" to="." method="_on__pressed" binds= ["(5,3)"]]
[connection signal="pressed" from="(1,4)" to="." method="_on__pressed" binds= ["(1,4)"]]
[connection signal="pressed" from="(2,4)" to="." method="_on__pressed" binds= ["(2,4)"]]
[connection signal="pressed" from="(3,4)" to="." method="_on__pressed" binds= ["(3,4)"]]
[connection signal="pressed" from="(4,4)" to="." method="_on__pressed" binds= ["(4,4)"]]
[connection signal="pressed" from="(5,4)" to="." method="_on__pressed" binds= ["(5,4)"]]
[connection signal="pressed" from="(1,5)" to="." method="_on__pressed" binds= ["(1,5)"]]
[connection signal="pressed" from="(2,5)" to="." method="_on__pressed" binds= ["(2,5)"]]
[connection signal="pressed" from="(3,5)" to="." method="_on__pressed" binds= ["(3,5)"]]
[connection signal="pressed" from="(4,5)" to="." method="_on__pressed" binds= ["(4,5)"]]
[connection signal="pressed" from="(5,5)" to="." method="_on__pressed" binds= ["(5,5)"]]
[connection signal="pressed" from="plank" to="." method="_on_plank_pressed"]
[connection signal="pressed" from="final_exit" to="." method="_on_final_exit_pressed"]
